// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getCumulativeStandings > 2012 only 1`] = `
[
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337222928615612416",
    "points_against": 1370.2,
    "points_against_avg": 97.87142857142858,
    "points_for": 1450.52,
    "points_for_avg": 103.60857142857142,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337297176361201664",
    "points_against": 1305,
    "points_against_avg": 93.21428571428571,
    "points_for": 1448.78,
    "points_for_avg": 103.48428571428572,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "77140390129844224",
    "points_against": 1249.1,
    "points_against_avg": 89.22142857142856,
    "points_for": 1423.78,
    "points_for_avg": 101.69857142857143,
    "runnerUp": [
      "2012",
    ],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [
      "2012",
    ],
    "losses": 6,
    "owner_id": "337221174670938112",
    "points_against": 1289.1,
    "points_against_avg": 92.07857142857142,
    "points_for": 1457.58,
    "points_for_avg": 104.11285714285714,
    "runnerUp": [],
    "scoringCrown": [
      "2012",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "chumbolegacy_jimmie",
    "points_against": 1364.48,
    "points_against_avg": 97.46285714285715,
    "points_for": 1336.96,
    "points_for_avg": 95.49714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Jimbo's Chiefs",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337210029620883456",
    "points_against": 1304.12,
    "points_against_avg": 93.15142857142857,
    "points_for": 1296.5,
    "points_for_avg": 92.60714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "77361676378587136",
    "points_against": 1319.08,
    "points_against_avg": 94.22,
    "points_for": 1286.94,
    "points_for_avg": 91.92428571428572,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "428943291145265152",
    "points_against": 1424.22,
    "points_against_avg": 101.73,
    "points_for": 1271.4,
    "points_for_avg": 90.81428571428572,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "chumbolegacy_karsten",
    "points_against": 1456.5,
    "points_against_avg": 104.03571428571429,
    "points_for": 1273.14,
    "points_for_avg": 90.93857142857144,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Team EZ",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "438629899490553856",
    "points_against": 1308.24,
    "points_against_avg": 93.44571428571429,
    "points_for": 1144.44,
    "points_for_avg": 81.74571428571429,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
]
`;

exports[`getCumulativeStandings > 2013 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "337221174670938112",
    "points_against": 1369.9,
    "points_against_avg": 97.85000000000001,
    "points_for": 1588.36,
    "points_for_avg": 113.4542857142857,
    "runnerUp": [],
    "scoringCrown": [
      "2013",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 78.57142857142857,
    "wins": 11,
  },
  {
    "champion": [],
    "losses": 3,
    "owner_id": "428943291145265152",
    "points_against": 1297.04,
    "points_against_avg": 92.64571428571428,
    "points_for": 1566.44,
    "points_for_avg": 111.88857142857144,
    "runnerUp": [
      "2013",
    ],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 78.57142857142857,
    "wins": 11,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337297176361201664",
    "points_against": 1310.64,
    "points_against_avg": 93.61714285714287,
    "points_for": 1404.42,
    "points_for_avg": 100.3157142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [
      "2013",
    ],
    "losses": 7,
    "owner_id": "337210029620883456",
    "points_against": 1387.86,
    "points_against_avg": 99.13285714285713,
    "points_for": 1395.32,
    "points_for_avg": 99.66571428571429,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "704708035829895168",
    "points_against": 1306.32,
    "points_against_avg": 93.30857142857143,
    "points_for": 1305.46,
    "points_for_avg": 93.24714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "77140390129844224",
    "points_against": 1396.34,
    "points_against_avg": 99.73857142857142,
    "points_for": 1381.8,
    "points_for_avg": 98.7,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337226046606704640",
    "points_against": 1342.34,
    "points_against_avg": 95.88142857142857,
    "points_for": 1187.3,
    "points_for_avg": 84.80714285714285,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "337222928615612416",
    "points_against": 1382.38,
    "points_against_avg": 98.74142857142859,
    "points_for": 1219.54,
    "points_for_avg": 87.11,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 35.714285714285715,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "438629899490553856",
    "points_against": 1235.5,
    "points_against_avg": 88.25,
    "points_for": 1201.22,
    "points_for_avg": 85.80142857142857,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 35.714285714285715,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 11,
    "owner_id": "77361676378587136",
    "points_against": 1380.96,
    "points_against_avg": 98.64,
    "points_for": 1159.42,
    "points_for_avg": 82.8157142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 21.428571428571427,
    "wins": 3,
  },
]
`;

exports[`getCumulativeStandings > 2014 only 1`] = `
[
  {
    "champion": [],
    "losses": 2,
    "owner_id": "337221174670938112",
    "points_against": 1140.36,
    "points_against_avg": 87.72,
    "points_for": 1329.72,
    "points_for_avg": 102.28615384615385,
    "runnerUp": [],
    "scoringCrown": [
      "2014",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 84.61538461538461,
    "wins": 11,
  },
  {
    "champion": [],
    "losses": 4,
    "owner_id": "77361676378587136",
    "points_against": 1151.96,
    "points_against_avg": 88.6123076923077,
    "points_for": 1243.26,
    "points_for_avg": 95.63538461538461,
    "runnerUp": [
      "2014",
    ],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 4,
    "owner_id": "337210029620883456",
    "points_against": 1125.6,
    "points_against_avg": 86.58461538461538,
    "points_for": 1237.86,
    "points_for_avg": 95.22,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337226046606704640",
    "points_against": 1174.68,
    "points_against_avg": 90.36,
    "points_for": 1316,
    "points_for_avg": 101.23076923076923,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [
      "2014",
    ],
    "losses": 6,
    "owner_id": "411186928751230976",
    "points_against": 1289.5,
    "points_against_avg": 99.1923076923077,
    "points_for": 1302.08,
    "points_for_avg": 100.16,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "77140390129844224",
    "points_against": 1263.94,
    "points_against_avg": 97.22615384615385,
    "points_for": 1227.92,
    "points_for_avg": 94.45538461538462,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "438629899490553856",
    "points_against": 1165.46,
    "points_against_avg": 89.65076923076923,
    "points_for": 1181.16,
    "points_for_avg": 90.85846153846154,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "428943291145265152",
    "points_against": 1234.06,
    "points_against_avg": 94.9276923076923,
    "points_for": 1169.6,
    "points_for_avg": 89.96923076923076,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "704708035829895168",
    "points_against": 1231,
    "points_against_avg": 94.6923076923077,
    "points_for": 1125.64,
    "points_for_avg": 86.58769230769232,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "chumbolegacy_sudio",
    "points_against": 1226.02,
    "points_against_avg": 94.30923076923077,
    "points_for": 1114.8,
    "points_for_avg": 85.75384615384615,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Suh Suh Sudio",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "337297176361201664",
    "points_against": 1108.22,
    "points_against_avg": 85.2476923076923,
    "points_for": 1073.64,
    "points_for_avg": 82.58769230769232,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "337222928615612416",
    "points_against": 1345.3,
    "points_against_avg": 103.48461538461538,
    "points_for": 1134.42,
    "points_for_avg": 87.26307692307692,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 23.076923076923077,
    "wins": 3,
  },
]
`;

exports[`getCumulativeStandings > 2015 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "438629899490553856",
    "points_against": 1127.16,
    "points_against_avg": 86.7046153846154,
    "points_for": 1266.2,
    "points_for_avg": 97.4,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 76.92307692307693,
    "wins": 10,
  },
  {
    "champion": [],
    "losses": 4,
    "owner_id": "77140390129844224",
    "points_against": 1176.46,
    "points_against_avg": 90.49692307692308,
    "points_for": 1377.52,
    "points_for_avg": 105.96307692307693,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337226046606704640",
    "points_against": 1252.1,
    "points_against_avg": 96.3153846153846,
    "points_for": 1307.14,
    "points_for_avg": 100.54923076923077,
    "runnerUp": [
      "2015",
    ],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [
      "2015",
    ],
    "losses": 5,
    "owner_id": "337297176361201664",
    "points_against": 1122.34,
    "points_against_avg": 86.33384615384615,
    "points_for": 1235.18,
    "points_for_avg": 95.01384615384616,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "chumbolegacy_sudio",
    "points_against": 1149.38,
    "points_against_avg": 88.41384615384617,
    "points_for": 1169.5,
    "points_for_avg": 89.96153846153847,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Suh Suh Sudio",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "428943291145265152",
    "points_against": 1300.12,
    "points_against_avg": 100.00923076923075,
    "points_for": 1396.02,
    "points_for_avg": 107.38615384615385,
    "runnerUp": [],
    "scoringCrown": [
      "2015",
    ],
    "team_name": "Kansas City Chumps",
    "ties": 1,
    "winPerc": 57.692307692307686,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337210029620883456",
    "points_against": 1163.36,
    "points_against_avg": 89.48923076923076,
    "points_for": 1228.52,
    "points_for_avg": 94.50153846153846,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 1,
    "winPerc": 57.692307692307686,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337221174670938112",
    "points_against": 1171.98,
    "points_against_avg": 90.15230769230769,
    "points_for": 1195.94,
    "points_for_avg": 91.99538461538462,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "77361676378587136",
    "points_against": 1215.22,
    "points_against_avg": 93.47846153846154,
    "points_for": 1192.92,
    "points_for_avg": 91.76307692307692,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "337222928615612416",
    "points_against": 1199.74,
    "points_against_avg": 92.28769230769231,
    "points_for": 1092.42,
    "points_for_avg": 84.0323076923077,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 11,
    "owner_id": "411186928751230976",
    "points_against": 1288.4,
    "points_against_avg": 99.10769230769232,
    "points_for": 1033.02,
    "points_for_avg": 79.46307692307693,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 15.384615384615385,
    "wins": 2,
  },
  {
    "champion": [],
    "losses": 11,
    "owner_id": "704708035829895168",
    "points_against": 1264.44,
    "points_against_avg": 97.26461538461538,
    "points_for": 936.32,
    "points_for_avg": 72.02461538461539,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 15.384615384615385,
    "wins": 2,
  },
]
`;

exports[`getCumulativeStandings > 2016 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "428943291145265152",
    "points_against": 1227.7,
    "points_against_avg": 94.43846153846154,
    "points_for": 1415.44,
    "points_for_avg": 108.88000000000001,
    "runnerUp": [],
    "scoringCrown": [
      "2016",
    ],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 76.92307692307693,
    "wins": 10,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337210029620883456",
    "points_against": 1175.26,
    "points_against_avg": 90.40461538461538,
    "points_for": 1367.84,
    "points_for_avg": 105.21846153846153,
    "runnerUp": [
      "2016",
    ],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337297176361201664",
    "points_against": 1169.34,
    "points_against_avg": 89.94923076923077,
    "points_for": 1195.56,
    "points_for_avg": 91.96615384615384,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [
      "2016",
    ],
    "losses": 6,
    "owner_id": "438629899490553856",
    "points_against": 1099.7,
    "points_against_avg": 84.5923076923077,
    "points_for": 1223.5,
    "points_for_avg": 94.11538461538461,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "77140390129844224",
    "points_against": 1261.08,
    "points_against_avg": 97.00615384615384,
    "points_for": 1175.42,
    "points_for_avg": 90.41692307692308,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337226046606704640",
    "points_against": 1263.36,
    "points_against_avg": 97.18153846153845,
    "points_for": 1253.96,
    "points_for_avg": 96.45846153846153,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "chumbolegacy_sudio",
    "points_against": 1197.26,
    "points_against_avg": 92.09692307692308,
    "points_for": 1243.58,
    "points_for_avg": 95.66,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Suh Suh Sudio",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337221174670938112",
    "points_against": 1237.74,
    "points_against_avg": 95.21076923076923,
    "points_for": 1184.26,
    "points_for_avg": 91.09692307692308,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "chumbolegacy_phil",
    "points_against": 1212.74,
    "points_against_avg": 93.28769230769231,
    "points_for": 1174.54,
    "points_for_avg": 90.34923076923077,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Consolation Prize",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "77361676378587136",
    "points_against": 1215.16,
    "points_against_avg": 93.47384615384615,
    "points_for": 1065.24,
    "points_for_avg": 81.94153846153846,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337222928615612416",
    "points_against": 1203.78,
    "points_against_avg": 92.59846153846154,
    "points_for": 1157.7,
    "points_for_avg": 89.05384615384615,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "411186928751230976",
    "points_against": 1283.5,
    "points_against_avg": 98.73076923076923,
    "points_for": 1089.58,
    "points_for_avg": 83.81384615384614,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 23.076923076923077,
    "wins": 3,
  },
]
`;

exports[`getCumulativeStandings > 2017 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "337210029620883456",
    "points_against": 1015,
    "points_against_avg": 78.07692307692308,
    "points_for": 1178.12,
    "points_for_avg": 90.62461538461538,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 76.92307692307693,
    "wins": 10,
  },
  {
    "champion": [
      "2017",
    ],
    "losses": 4,
    "owner_id": "337221174670938112",
    "points_against": 1133.86,
    "points_against_avg": 87.22,
    "points_for": 1278.1,
    "points_for_avg": 98.3153846153846,
    "runnerUp": [],
    "scoringCrown": [
      "2017",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 4,
    "owner_id": "429243125446230016",
    "points_against": 1084.9,
    "points_against_avg": 83.45384615384616,
    "points_for": 1272.36,
    "points_for_avg": 97.87384615384615,
    "runnerUp": [
      "2017",
    ],
    "scoringCrown": [],
    "team_name": "Catch-22",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337226046606704640",
    "points_against": 1029.1,
    "points_against_avg": 79.16153846153846,
    "points_for": 1227.56,
    "points_for_avg": 94.4276923076923,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "77361676378587136",
    "points_against": 1261.32,
    "points_against_avg": 97.02461538461537,
    "points_for": 1187.9,
    "points_for_avg": 91.37692307692308,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "411186928751230976",
    "points_against": 1266.04,
    "points_against_avg": 97.3876923076923,
    "points_for": 1186.52,
    "points_for_avg": 91.27076923076923,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "428943291145265152",
    "points_against": 1136.78,
    "points_against_avg": 87.44461538461539,
    "points_for": 1147.82,
    "points_for_avg": 88.29384615384615,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "chumbolegacy_sudio",
    "points_against": 1139.56,
    "points_against_avg": 87.65846153846154,
    "points_for": 1085.38,
    "points_for_avg": 83.49076923076925,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Suh Suh Sudio",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "438629899490553856",
    "points_against": 1075.1,
    "points_against_avg": 82.69999999999999,
    "points_for": 1026.8,
    "points_for_avg": 78.98461538461538,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337297176361201664",
    "points_against": 1183.76,
    "points_against_avg": 91.05846153846154,
    "points_for": 1130.16,
    "points_for_avg": 86.93538461538462,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "77140390129844224",
    "points_against": 1198.06,
    "points_against_avg": 92.15846153846154,
    "points_for": 1110.98,
    "points_for_avg": 85.46000000000001,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 11,
    "owner_id": "337222928615612416",
    "points_against": 1308.46,
    "points_against_avg": 100.65076923076923,
    "points_for": 1000.48,
    "points_for_avg": 76.96000000000001,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 15.384615384615385,
    "wins": 2,
  },
]
`;

exports[`getCumulativeStandings > 2018 only 1`] = `
[
  {
    "champion": [
      "2018",
    ],
    "losses": 1,
    "owner_id": "428943291145265152",
    "points_against": 1184.18,
    "points_against_avg": 91.09076923076924,
    "points_for": 1483.08,
    "points_for_avg": 114.08307692307692,
    "runnerUp": [],
    "scoringCrown": [
      "2018",
    ],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 92.3076923076923,
    "wins": 12,
  },
  {
    "champion": [],
    "losses": 3,
    "owner_id": "411186928751230976",
    "points_against": 1209.96,
    "points_against_avg": 93.07384615384616,
    "points_for": 1356.04,
    "points_for_avg": 104.31076923076922,
    "runnerUp": [
      "2018",
    ],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 76.92307692307693,
    "wins": 10,
  },
  {
    "champion": [],
    "losses": 4,
    "owner_id": "337222928615612416",
    "points_against": 1209,
    "points_against_avg": 93,
    "points_for": 1431.16,
    "points_for_avg": 110.08923076923078,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 4,
    "owner_id": "337221174670938112",
    "points_against": 1156.26,
    "points_against_avg": 88.94307692307692,
    "points_for": 1330.44,
    "points_for_avg": 102.34153846153846,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "429243125446230016",
    "points_against": 1322.62,
    "points_against_avg": 101.74,
    "points_for": 1351.52,
    "points_for_avg": 103.96307692307693,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Catch-22",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "77140390129844224",
    "points_against": 1293.6,
    "points_against_avg": 99.5076923076923,
    "points_for": 1410.38,
    "points_for_avg": 108.49076923076925,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337210029620883456",
    "points_against": 1268.64,
    "points_against_avg": 97.58769230769232,
    "points_for": 1192.82,
    "points_for_avg": 91.75538461538461,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337297176361201664",
    "points_against": 1388.92,
    "points_against_avg": 106.84,
    "points_for": 1142.08,
    "points_for_avg": 87.85230769230769,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "438629899490553856",
    "points_against": 1350.56,
    "points_against_avg": 103.88923076923076,
    "points_for": 1197.58,
    "points_for_avg": 92.12153846153845,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "337226046606704640",
    "points_against": 1344,
    "points_against_avg": 103.38461538461539,
    "points_for": 1157.36,
    "points_for_avg": 89.0276923076923,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "chumbolegacy_sudio",
    "points_against": 1227.1,
    "points_against_avg": 94.39230769230768,
    "points_for": 1072.82,
    "points_for_avg": 82.52461538461537,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Suh Suh Sudio",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "77361676378587136",
    "points_against": 1263.02,
    "points_against_avg": 97.15538461538462,
    "points_for": 1093.44,
    "points_for_avg": 84.11076923076924,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 23.076923076923077,
    "wins": 3,
  },
]
`;

exports[`getCumulativeStandings > 2019 only 1`] = `
[
  {
    "champion": [],
    "losses": 4,
    "owner_id": "429243125446230016",
    "points_against": 1177.68,
    "points_against_avg": 90.59076923076924,
    "points_for": 1409.58,
    "points_for_avg": 108.42923076923077,
    "runnerUp": [
      "2019",
    ],
    "scoringCrown": [
      "2019",
    ],
    "team_name": "Catch-22",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337221174670938112",
    "points_against": 1259.94,
    "points_against_avg": 96.91846153846154,
    "points_for": 1365.1,
    "points_for_avg": 105.0076923076923,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [
      "2019",
    ],
    "losses": 5,
    "owner_id": "428943291145265152",
    "points_against": 1234,
    "points_against_avg": 94.92307692307692,
    "points_for": 1325.3,
    "points_for_avg": 101.94615384615385,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "77140390129844224",
    "points_against": 1238.96,
    "points_against_avg": 95.30461538461539,
    "points_for": 1281.78,
    "points_for_avg": 98.59846153846154,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337222928615612416",
    "points_against": 1126.96,
    "points_against_avg": 86.68923076923078,
    "points_for": 1202.84,
    "points_for_avg": 92.52615384615385,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337297176361201664",
    "points_against": 1249.06,
    "points_against_avg": 96.08153846153846,
    "points_for": 1250.14,
    "points_for_avg": 96.16461538461539,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "359110473351696384",
    "points_against": 1304.72,
    "points_against_avg": 100.36307692307693,
    "points_for": 1197.16,
    "points_for_avg": 92.08923076923078,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "411186928751230976",
    "points_against": 1160.12,
    "points_against_avg": 89.24,
    "points_for": 1220.36,
    "points_for_avg": 93.87384615384615,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337210029620883456",
    "points_against": 1230.94,
    "points_against_avg": 94.68769230769232,
    "points_for": 1069.1,
    "points_for_avg": 82.23846153846154,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "438629899490553856",
    "points_against": 1337.22,
    "points_against_avg": 102.86307692307693,
    "points_for": 1182.24,
    "points_for_avg": 90.94153846153846,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "337226046606704640",
    "points_against": 1224.66,
    "points_against_avg": 94.2046153846154,
    "points_for": 1149.36,
    "points_for_avg": 88.41230769230768,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "77361676378587136",
    "points_against": 1257,
    "points_against_avg": 96.6923076923077,
    "points_for": 1148.68,
    "points_for_avg": 88.36,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
]
`;

exports[`getCumulativeStandings > 2020 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "77140390129844224",
    "points_against": 1196,
    "points_against_avg": 92,
    "points_for": 1534.94,
    "points_for_avg": 118.0723076923077,
    "runnerUp": [
      "2020",
    ],
    "scoringCrown": [
      "2020",
    ],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 76.92307692307693,
    "wins": 10,
  },
  {
    "champion": [
      "2020",
    ],
    "losses": 4,
    "owner_id": "429243125446230016",
    "points_against": 1220.3,
    "points_against_avg": 93.86923076923077,
    "points_for": 1310.36,
    "points_for_avg": 100.79692307692306,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Catch-22",
    "ties": 0,
    "winPerc": 69.23076923076923,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337210029620883456",
    "points_against": 1161.34,
    "points_against_avg": 89.33384615384615,
    "points_for": 1287.6,
    "points_for_avg": 99.04615384615384,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 61.53846153846154,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337222928615612416",
    "points_against": 1346.7,
    "points_against_avg": 103.5923076923077,
    "points_for": 1235.44,
    "points_for_avg": 95.03384615384616,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337226046606704640",
    "points_against": 1234.08,
    "points_against_avg": 94.92923076923077,
    "points_for": 1181.08,
    "points_for_avg": 90.85230769230769,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 53.84615384615385,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337221174670938112",
    "points_against": 1303.6,
    "points_against_avg": 100.27692307692307,
    "points_for": 1373.16,
    "points_for_avg": 105.62769230769231,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337297176361201664",
    "points_against": 1258.24,
    "points_against_avg": 96.78769230769231,
    "points_for": 1330.94,
    "points_for_avg": 102.38000000000001,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "438629899490553856",
    "points_against": 1235.98,
    "points_against_avg": 95.07538461538462,
    "points_for": 1221.88,
    "points_for_avg": 93.99076923076925,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "77361676378587136",
    "points_against": 1120.34,
    "points_against_avg": 86.17999999999999,
    "points_for": 1068.58,
    "points_for_avg": 82.19846153846153,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "428943291145265152",
    "points_against": 1275.52,
    "points_against_avg": 98.11692307692307,
    "points_for": 1166.08,
    "points_for_avg": 89.69846153846153,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 38.46153846153847,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "359110473351696384",
    "points_against": 1312.76,
    "points_against_avg": 100.98153846153846,
    "points_for": 1164.3,
    "points_for_avg": 89.56153846153846,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "411186928751230976",
    "points_against": 1314.64,
    "points_against_avg": 101.12615384615385,
    "points_for": 1105.14,
    "points_for_avg": 85.01076923076924,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 30.76923076923077,
    "wins": 4,
  },
]
`;

exports[`getCumulativeStandings > 2021 only 1`] = `
[
  {
    "champion": [
      "2021",
    ],
    "losses": 4,
    "owner_id": "337297176361201664",
    "points_against": 1196.16,
    "points_against_avg": 85.44000000000001,
    "points_for": 1296.9,
    "points_for_avg": 92.63571428571429,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 71.42857142857143,
    "wins": 10,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "428943291145265152",
    "points_against": 1415.12,
    "points_against_avg": 101.08,
    "points_for": 1526.04,
    "points_for_avg": 109.00285714285714,
    "runnerUp": [],
    "scoringCrown": [
      "2021",
    ],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337221174670938112",
    "points_against": 1299.78,
    "points_against_avg": 92.84142857142857,
    "points_for": 1444.14,
    "points_for_avg": 103.15285714285714,
    "runnerUp": [
      "2021",
    ],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337226046606704640",
    "points_against": 1367.9,
    "points_against_avg": 97.70714285714287,
    "points_for": 1429.46,
    "points_for_avg": 102.10428571428572,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "429243125446230016",
    "points_against": 1211.44,
    "points_against_avg": 86.53142857142858,
    "points_for": 1373.04,
    "points_for_avg": 98.07428571428571,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Catch-22",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "411186928751230976",
    "points_against": 1358.18,
    "points_against_avg": 97.01285714285714,
    "points_for": 1301.82,
    "points_for_avg": 92.98714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337222928615612416",
    "points_against": 1274.08,
    "points_against_avg": 91.00571428571428,
    "points_for": 1274.94,
    "points_for_avg": 91.06714285714285,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "77361676378587136",
    "points_against": 1384.06,
    "points_against_avg": 98.86142857142856,
    "points_for": 1398.18,
    "points_for_avg": 99.87,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "77140390129844224",
    "points_against": 1374.22,
    "points_against_avg": 98.15857142857143,
    "points_for": 1349.48,
    "points_for_avg": 96.39142857142858,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337210029620883456",
    "points_against": 1320.82,
    "points_against_avg": 94.3442857142857,
    "points_for": 1232.94,
    "points_for_avg": 88.06714285714285,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "359110473351696384",
    "points_against": 1436.18,
    "points_against_avg": 102.58428571428571,
    "points_for": 1268.76,
    "points_for_avg": 90.62571428571428,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 35.714285714285715,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 11,
    "owner_id": "438629899490553856",
    "points_against": 1357.88,
    "points_against_avg": 96.99142857142859,
    "points_for": 1100.12,
    "points_for_avg": 78.58,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 21.428571428571427,
    "wins": 3,
  },
]
`;

exports[`getCumulativeStandings > 2022 only 1`] = `
[
  {
    "champion": [
      "2022",
    ],
    "losses": 3,
    "owner_id": "337221174670938112",
    "points_against": 1172.68,
    "points_against_avg": 83.76285714285714,
    "points_for": 1499.24,
    "points_for_avg": 107.08857142857143,
    "runnerUp": [],
    "scoringCrown": [
      "2022",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 78.57142857142857,
    "wins": 11,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "77361676378587136",
    "points_against": 1287.42,
    "points_against_avg": 91.95857142857143,
    "points_for": 1313.24,
    "points_for_avg": 93.80285714285715,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337210029620883456",
    "points_against": 1237.14,
    "points_against_avg": 88.36714285714287,
    "points_for": 1293.32,
    "points_for_avg": 92.38,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337226046606704640",
    "points_against": 1276.7,
    "points_against_avg": 91.19285714285715,
    "points_for": 1407.04,
    "points_for_avg": 100.50285714285714,
    "runnerUp": [
      "2022",
    ],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "411186928751230976",
    "points_against": 1269.06,
    "points_against_avg": 90.64714285714285,
    "points_for": 1311.84,
    "points_for_avg": 93.70285714285714,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "704708035829895168",
    "points_against": 1392.74,
    "points_against_avg": 99.48142857142857,
    "points_for": 1288.84,
    "points_for_avg": 92.05999999999999,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337297176361201664",
    "points_against": 1334.36,
    "points_against_avg": 95.31142857142856,
    "points_for": 1438.44,
    "points_for_avg": 102.74571428571429,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "428943291145265152",
    "points_against": 1323.16,
    "points_against_avg": 94.51142857142858,
    "points_for": 1310.22,
    "points_for_avg": 93.58714285714287,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "359110473351696384",
    "points_against": 1272.4,
    "points_against_avg": 90.88571428571429,
    "points_for": 1243.84,
    "points_for_avg": 88.84571428571428,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "438629899490553856",
    "points_against": 1189.46,
    "points_against_avg": 84.96142857142857,
    "points_for": 1190.8,
    "points_for_avg": 85.05714285714285,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "337222928615612416",
    "points_against": 1364.12,
    "points_against_avg": 97.43714285714285,
    "points_for": 1234.8,
    "points_for_avg": 88.2,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 13,
    "owner_id": "77140390129844224",
    "points_against": 1437.84,
    "points_against_avg": 102.70285714285714,
    "points_for": 1025.46,
    "points_for_avg": 73.24714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 7.142857142857142,
    "wins": 1,
  },
]
`;

exports[`getCumulativeStandings > 2023 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "337222928615612416",
    "points_against": 1139.24,
    "points_against_avg": 81.37428571428572,
    "points_for": 1340.04,
    "points_for_avg": 95.71714285714286,
    "runnerUp": [
      "2023",
    ],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 78.57142857142857,
    "wins": 11,
  },
  {
    "champion": [
      "2023",
    ],
    "losses": 5,
    "owner_id": "359110473351696384",
    "points_against": 1316.44,
    "points_against_avg": 94.03142857142858,
    "points_for": 1445.14,
    "points_for_avg": 103.22428571428573,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337221174670938112",
    "points_against": 1321.78,
    "points_against_avg": 94.41285714285713,
    "points_for": 1451.52,
    "points_for_avg": 103.67999999999999,
    "runnerUp": [],
    "scoringCrown": [
      "2023",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337297176361201664",
    "points_against": 1255.78,
    "points_against_avg": 89.69857142857143,
    "points_for": 1318.98,
    "points_for_avg": 94.21285714285715,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "77140390129844224",
    "points_against": 1358.62,
    "points_against_avg": 97.0442857142857,
    "points_for": 1391.36,
    "points_for_avg": 99.38285714285713,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "428943291145265152",
    "points_against": 1349.44,
    "points_against_avg": 96.38857142857144,
    "points_for": 1318.76,
    "points_for_avg": 94.19714285714285,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "438629899490553856",
    "points_against": 1319.9,
    "points_against_avg": 94.27857142857144,
    "points_for": 1232.38,
    "points_for_avg": 88.02714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "411186928751230976",
    "points_against": 1317.76,
    "points_against_avg": 94.12571428571428,
    "points_for": 1311.92,
    "points_for_avg": 93.70857142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337210029620883456",
    "points_against": 1293.04,
    "points_against_avg": 92.36,
    "points_for": 1302.32,
    "points_for_avg": 93.02285714285713,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "704708035829895168",
    "points_against": 1371.24,
    "points_against_avg": 97.94571428571429,
    "points_for": 1212.68,
    "points_for_avg": 86.62,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "337226046606704640",
    "points_against": 1312.54,
    "points_against_avg": 93.75285714285714,
    "points_for": 1219.64,
    "points_for_avg": 87.11714285714287,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 35.714285714285715,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "77361676378587136",
    "points_against": 1383.24,
    "points_against_avg": 98.80285714285715,
    "points_for": 1194.28,
    "points_for_avg": 85.30571428571429,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
]
`;

exports[`getCumulativeStandings > 2024 only 1`] = `
[
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337222928615612416",
    "points_against": 1391.4,
    "points_against_avg": 99.38571428571429,
    "points_for": 1466.06,
    "points_for_avg": 104.71857142857142,
    "runnerUp": [
      "2024",
    ],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 5,
    "owner_id": "337226046606704640",
    "points_against": 1247.2,
    "points_against_avg": 89.08571428571429,
    "points_for": 1344.38,
    "points_for_avg": 96.02714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [
      "2024",
    ],
    "losses": 5,
    "owner_id": "77140390129844224",
    "points_against": 1146.96,
    "points_against_avg": 81.92571428571429,
    "points_for": 1279.62,
    "points_for_avg": 91.40142857142857,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 64.28571428571429,
    "wins": 9,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "359110473351696384",
    "points_against": 1276.34,
    "points_against_avg": 91.16714285714285,
    "points_for": 1284.68,
    "points_for_avg": 91.76285714285714,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "411186928751230976",
    "points_against": 1255.08,
    "points_against_avg": 89.64857142857143,
    "points_for": 1227.72,
    "points_for_avg": 87.69428571428571,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "428943291145265152",
    "points_against": 1294.9,
    "points_against_avg": 92.49285714285715,
    "points_for": 1506.84,
    "points_for_avg": 107.63142857142857,
    "runnerUp": [],
    "scoringCrown": [
      "2024",
    ],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "704708035829895168",
    "points_against": 1305.68,
    "points_against_avg": 93.26285714285714,
    "points_for": 1393.82,
    "points_for_avg": 99.55857142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "337297176361201664",
    "points_against": 1375.26,
    "points_against_avg": 98.23285714285714,
    "points_for": 1355.92,
    "points_for_avg": 96.85142857142857,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337210029620883456",
    "points_against": 1467.54,
    "points_against_avg": 104.82428571428571,
    "points_for": 1409.04,
    "points_for_avg": 100.64571428571428,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "337221174670938112",
    "points_against": 1372.34,
    "points_against_avg": 98.02428571428571,
    "points_for": 1282.8,
    "points_for_avg": 91.62857142857142,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "77361676378587136",
    "points_against": 1381.42,
    "points_against_avg": 98.67285714285715,
    "points_for": 1312,
    "points_for_avg": 93.71428571428571,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 35.714285714285715,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 11,
    "owner_id": "438629899490553856",
    "points_against": 1468.1,
    "points_against_avg": 104.86428571428571,
    "points_for": 1119.34,
    "points_for_avg": 79.95285714285714,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 21.428571428571427,
    "wins": 3,
  },
]
`;

exports[`getCumulativeStandings > 2025 only 1`] = `
[
  {
    "champion": [],
    "losses": 3,
    "owner_id": "337210029620883456",
    "points_against": 1174.98,
    "points_against_avg": 83.92714285714285,
    "points_for": 1418.78,
    "points_for_avg": 101.34142857142857,
    "runnerUp": [
      "2025",
    ],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 78.57142857142857,
    "wins": 11,
  },
  {
    "champion": [],
    "losses": 3,
    "owner_id": "77361676378587136",
    "points_against": 1170.12,
    "points_against_avg": 83.58,
    "points_for": 1314.76,
    "points_for_avg": 93.91142857142857,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 78.57142857142857,
    "wins": 11,
  },
  {
    "champion": [
      "2025",
    ],
    "losses": 6,
    "owner_id": "337226046606704640",
    "points_against": 1302.38,
    "points_against_avg": 93.02714285714286,
    "points_for": 1478.54,
    "points_for_avg": 105.61,
    "runnerUp": [],
    "scoringCrown": [
      "2025",
    ],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "337297176361201664",
    "points_against": 1391.68,
    "points_against_avg": 99.4057142857143,
    "points_for": 1423.38,
    "points_for_avg": 101.67,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "77140390129844224",
    "points_against": 1283.12,
    "points_against_avg": 91.65142857142857,
    "points_for": 1330.3,
    "points_for_avg": 95.02142857142857,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 6,
    "owner_id": "411186928751230976",
    "points_against": 1210.36,
    "points_against_avg": 86.4542857142857,
    "points_for": 1192.4,
    "points_for_avg": 85.17142857142858,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 57.14285714285714,
    "wins": 8,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "704708035829895168",
    "points_against": 1272.48,
    "points_against_avg": 90.89142857142858,
    "points_for": 1330.96,
    "points_for_avg": 95.06857142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [],
    "losses": 8,
    "owner_id": "428943291145265152",
    "points_against": 1283.18,
    "points_against_avg": 91.6557142857143,
    "points_for": 1257.32,
    "points_for_avg": 89.80857142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 42.857142857142854,
    "wins": 6,
  },
  {
    "champion": [],
    "losses": 9,
    "owner_id": "438629899490553856",
    "points_against": 1355.84,
    "points_against_avg": 96.84571428571428,
    "points_for": 1278.74,
    "points_for_avg": 91.33857142857143,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 35.714285714285715,
    "wins": 5,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "337221174670938112",
    "points_against": 1362.1,
    "points_against_avg": 97.29285714285713,
    "points_for": 1249.22,
    "points_for_avg": 89.23,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "359110473351696384",
    "points_against": 1433.18,
    "points_against_avg": 102.37,
    "points_for": 1231.22,
    "points_for_avg": 87.94428571428571,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "337222928615612416",
    "points_against": 1391.76,
    "points_against_avg": 99.41142857142857,
    "points_for": 1125.56,
    "points_for_avg": 80.39714285714285,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
]
`;

exports[`getCumulativeStandings > 2026 only 1`] = `
[
  {
    "champion": [],
    "losses": 0,
    "owner_id": "359110473351696384",
    "points_against": 201.3,
    "points_against_avg": 100.65,
    "points_for": 221.44,
    "points_for_avg": 110.72,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 100,
    "wins": 2,
  },
  {
    "champion": [],
    "losses": 0,
    "owner_id": "337210029620883456",
    "points_against": 189.3,
    "points_against_avg": 94.65,
    "points_for": 203.28,
    "points_for_avg": 101.64,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 0,
    "winPerc": 100,
    "wins": 2,
  },
  {
    "champion": [],
    "losses": 0,
    "owner_id": "438629899490553856",
    "points_against": 153.92,
    "points_against_avg": 76.96,
    "points_for": 190.76,
    "points_for_avg": 95.38,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 100,
    "wins": 2,
  },
  {
    "champion": [],
    "losses": 1,
    "owner_id": "337222928615612416",
    "points_against": 244.74,
    "points_against_avg": 122.37,
    "points_for": 256.28,
    "points_for_avg": 128.14,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 50,
    "wins": 1,
  },
  {
    "champion": [],
    "losses": 1,
    "owner_id": "337297176361201664",
    "points_against": 210.7,
    "points_against_avg": 105.35,
    "points_for": 208.38,
    "points_for_avg": 104.19,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 50,
    "wins": 1,
  },
  {
    "champion": [],
    "losses": 1,
    "owner_id": "704708035829895168",
    "points_against": 185.76,
    "points_against_avg": 92.88,
    "points_for": 193.2,
    "points_for_avg": 96.6,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 50,
    "wins": 1,
  },
  {
    "champion": [],
    "losses": 1,
    "owner_id": "77361676378587136",
    "points_against": 195.76,
    "points_against_avg": 97.88,
    "points_for": 185.82,
    "points_for_avg": 92.91,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 50,
    "wins": 1,
  },
  {
    "champion": [],
    "losses": 1,
    "owner_id": "411186928751230976",
    "points_against": 184.56,
    "points_against_avg": 92.28,
    "points_for": 179.34,
    "points_for_avg": 89.67,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 50,
    "wins": 1,
  },
  {
    "champion": [],
    "losses": 1,
    "owner_id": "337221174670938112",
    "points_against": 163.48,
    "points_against_avg": 81.74,
    "points_for": 177.08,
    "points_for_avg": 88.54,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 50,
    "wins": 1,
  },
  {
    "champion": [],
    "losses": 2,
    "owner_id": "77140390129844224",
    "points_against": 220.62,
    "points_against_avg": 110.31,
    "points_for": 189.86,
    "points_for_avg": 94.93,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 0,
    "wins": 0,
  },
  {
    "champion": [],
    "losses": 2,
    "owner_id": "337226046606704640",
    "points_against": 189.28,
    "points_against_avg": 94.64,
    "points_for": 160.84,
    "points_for_avg": 80.42,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 0,
    "wins": 0,
  },
  {
    "champion": [],
    "losses": 2,
    "owner_id": "428943291145265152",
    "points_against": 185.14,
    "points_against_avg": 92.57,
    "points_for": 158.28,
    "points_for_avg": 79.14,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Kansas City Chumps",
    "ties": 0,
    "winPerc": 0,
    "wins": 0,
  },
]
`;

exports[`getCumulativeStandings > all-time (every year) 1`] = `
[
  {
    "champion": [
      "2020",
    ],
    "losses": 24,
    "owner_id": "429243125446230016",
    "points_against": 6016.9400000000005,
    "points_against_avg": 91.16575757575758,
    "points_for": 6716.86,
    "points_for_avg": 101.77060606060606,
    "runnerUp": [
      "2017",
      "2019",
    ],
    "scoringCrown": [
      "2019",
    ],
    "team_name": "Catch-22",
    "ties": 0,
    "winPerc": 63.63636363636363,
    "wins": 42,
  },
  {
    "champion": [
      "2012",
      "2017",
      "2022",
    ],
    "losses": 78,
    "owner_id": "337221174670938112",
    "points_against": 17754.9,
    "points_against_avg": 92.95759162303666,
    "points_for": 19206.660000000003,
    "points_for_avg": 100.55842931937174,
    "runnerUp": [
      "2021",
    ],
    "scoringCrown": [
      "2012",
      "2013",
      "2014",
      "2017",
      "2022",
      "2023",
    ],
    "team_name": "SIIIBON",
    "ties": 0,
    "winPerc": 59.16230366492147,
    "wins": 113,
  },
  {
    "champion": [
      "2013",
    ],
    "losses": 84,
    "owner_id": "337210029620883456",
    "points_against": 17514.94,
    "points_against_avg": 91.70125654450261,
    "points_for": 18113.359999999997,
    "points_for_avg": 94.8343455497382,
    "runnerUp": [
      "2016",
      "2025",
    ],
    "scoringCrown": [],
    "team_name": "Bush Johnson",
    "ties": 1,
    "winPerc": 55.75916230366492,
    "wins": 106,
  },
  {
    "champion": [
      "2018",
      "2019",
    ],
    "losses": 85,
    "owner_id": "428943291145265152",
    "points_against": 18164.56,
    "points_against_avg": 95.10240837696335,
    "points_for": 19018.639999999996,
    "points_for_avg": 99.57403141361254,
    "runnerUp": [
      "2013",
    ],
    "scoringCrown": [
      "2015",
      "2016",
      "2018",
      "2021",
      "2024",
    ],
    "team_name": "Kansas City Chumps",
    "ties": 1,
    "winPerc": 55.235602094240846,
    "wins": 105,
  },
  {
    "champion": [
      "2015",
      "2021",
    ],
    "losses": 89,
    "owner_id": "337297176361201664",
    "points_against": 17859.460000000003,
    "points_against_avg": 93.50502617801048,
    "points_for": 18252.9,
    "points_for_avg": 95.5649214659686,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Wolverhampton Wasters",
    "ties": 0,
    "winPerc": 53.403141361256544,
    "wins": 102,
  },
  {
    "champion": [
      "2024",
    ],
    "losses": 93,
    "owner_id": "77140390129844224",
    "points_against": 18094.92,
    "points_against_avg": 94.73780104712041,
    "points_for": 18490.6,
    "points_for_avg": 96.80942408376963,
    "runnerUp": [
      "2012",
      "2020",
    ],
    "scoringCrown": [
      "2020",
    ],
    "team_name": "King of Wishful Tinkering",
    "ties": 0,
    "winPerc": 51.30890052356021,
    "wins": 98,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "chumbolegacy_jimmie",
    "points_against": 1364.48,
    "points_against_avg": 97.46285714285715,
    "points_for": 1336.96,
    "points_for_avg": 95.49714285714286,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Jimbo's Chiefs",
    "ties": 0,
    "winPerc": 50,
    "wins": 7,
  },
  {
    "champion": [
      "2025",
    ],
    "losses": 89,
    "owner_id": "337226046606704640",
    "points_against": 16560.32,
    "points_against_avg": 93.56112994350282,
    "points_for": 16819.660000000003,
    "points_for_avg": 95.02632768361583,
    "runnerUp": [
      "2015",
      "2022",
    ],
    "scoringCrown": [
      "2025",
    ],
    "team_name": "21st & Hine",
    "ties": 0,
    "winPerc": 49.717514124293785,
    "wins": 88,
  },
  {
    "champion": [
      "2014",
    ],
    "losses": 86,
    "owner_id": "411186928751230976",
    "points_against": 15407.16,
    "points_against_avg": 94.52245398773006,
    "points_for": 14817.779999999999,
    "points_for_avg": 90.90662576687116,
    "runnerUp": [
      "2018",
    ],
    "scoringCrown": [],
    "team_name": "The Unicorn",
    "ties": 0,
    "winPerc": 47.239263803680984,
    "wins": 77,
  },
  {
    "champion": [],
    "losses": 102,
    "owner_id": "337222928615612416",
    "points_against": 18297.86,
    "points_against_avg": 95.80031413612566,
    "points_for": 17622.199999999997,
    "points_for_avg": 92.26282722513088,
    "runnerUp": [
      "2023",
      "2024",
    ],
    "scoringCrown": [],
    "team_name": "Zaragoza's Zooting Zorro",
    "ties": 0,
    "winPerc": 46.596858638743456,
    "wins": 89,
  },
  {
    "champion": [],
    "losses": 7,
    "owner_id": "chumbolegacy_phil",
    "points_against": 1212.74,
    "points_against_avg": 93.28769230769231,
    "points_for": 1174.54,
    "points_for_avg": 90.34923076923077,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Consolation Prize",
    "ties": 0,
    "winPerc": 46.15384615384615,
    "wins": 6,
  },
  {
    "champion": [
      "2023",
    ],
    "losses": 53,
    "owner_id": "359110473351696384",
    "points_against": 9553.32,
    "points_against_avg": 97.48285714285714,
    "points_for": 9056.54,
    "points_for_avg": 92.41367346938776,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Pimpin Ain't Leesy",
    "ties": 0,
    "winPerc": 45.91836734693878,
    "wins": 45,
  },
  {
    "champion": [],
    "losses": 106,
    "owner_id": "77361676378587136",
    "points_against": 17986.079999999994,
    "points_against_avg": 94.16795811518321,
    "points_for": 17164.66,
    "points_for_avg": 89.86732984293194,
    "runnerUp": [
      "2014",
    ],
    "scoringCrown": [],
    "team_name": "The Roaches",
    "ties": 0,
    "winPerc": 44.50261780104712,
    "wins": 85,
  },
  {
    "champion": [],
    "losses": 55,
    "owner_id": "704708035829895168",
    "points_against": 9329.66,
    "points_against_avg": 95.20061224489795,
    "points_for": 8786.920000000002,
    "points_for_avg": 89.66244897959186,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "The Disciples of Juan Carlos",
    "ties": 0,
    "winPerc": 43.87755102040816,
    "wins": 43,
  },
  {
    "champion": [],
    "losses": 37,
    "owner_id": "chumbolegacy_sudio",
    "points_against": 5939.32,
    "points_against_avg": 91.37415384615385,
    "points_for": 5686.08,
    "points_for_avg": 87.47815384615384,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Suh Suh Sudio",
    "ties": 0,
    "winPerc": 43.07692307692308,
    "wins": 28,
  },
  {
    "champion": [
      "2016",
    ],
    "losses": 112,
    "owner_id": "438629899490553856",
    "points_against": 17780.019999999997,
    "points_against_avg": 93.08910994764396,
    "points_for": 16757.16,
    "points_for_avg": 87.73382198952879,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Tha Dollar",
    "ties": 0,
    "winPerc": 41.361256544502616,
    "wins": 79,
  },
  {
    "champion": [],
    "losses": 10,
    "owner_id": "chumbolegacy_karsten",
    "points_against": 1456.5,
    "points_against_avg": 104.03571428571429,
    "points_for": 1273.14,
    "points_for_avg": 90.93857142857144,
    "runnerUp": [],
    "scoringCrown": [],
    "team_name": "Team EZ",
    "ties": 0,
    "winPerc": 28.57142857142857,
    "wins": 4,
  },
]
`;
